--- a/pages/chat/chat.wxss
+++ b/pages/chat/chat.wxss
@@ -1,389 +1,274 @@
-/* pages/chat/chat.wxss */
+@import "../../modules/chat-input/chat-input.wxss";
 page {
- 
-  background-color: #f7f7f7;
-   
-  height: 100%;
-   
-  }
-   
-/* 聊天记录 */
-/* pages/chat/friends/friends.wxss */
-.faceImage{
-  width:120rpx;
-  height:120rpx;
-  border-radius:50%;
-  margin-right:40rpx;
-  /* margin-bottom: 40rpx; */
-  
+    background-color: #fafafa;
+}
+view,
+textarea,
+input,text,
+scroll-view{
+    box-sizing: border-box;
+}
+.chat{
+    display: flex;
+    flex-direction: column;
+    
+}
+.chat-content{
+    -webkit-overflow-scrolling: touch;
+}
+.chat-content>view:last-child{
+  margin-bottom: 50rpx;
+}
+.chat-content-list{
+    display: flex;
+    align-items: flex-start;
+    padding:0 30rpx;
+}
+.chat-content-list.right{
+    flex-direction: row-reverse;
+}
+.chat-content-list.right > .chat-content-list-avatar{
+    margin-right: 0;
+    margin-left: 30rpx;
+    display: none;
+}
+.chat-content-list.right > .chat-content-list-content > .chat-content-list-name{
+    margin-right: 16rpx;
+    text-align: right;
+}
+.chat-content-list.right > .chat-content-list-content .chat-content-list-msg{
+    margin-left: 0;
+    /* margin-right: 14rpx; */
+    background: #1eb625;
+    color: #fff;
 }
 
-.user-list{
-  display:flex;
-  direction:row;
-  margin:20rpx 20rpx;
-
+.chat-content-list-voice{
+    padding: 0 0 0 40rpx;
+    box-sizing: border-box;
+    border-top-left-radius: 43rpx;
+    border-top-right-radius: 43rpx;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 43rpx;
+    background-color: #553a91;
+    font-size: 32rpx;
+    color: #fff;
+    position: relative;
+    /* margin-right: 14rpx; */
+    min-width: 200rpx;
+    max-width: 332rpx;
+    line-height:86rpx;
+    font-weight: 300;
+    height: 86rpx;
+    /* margin-top: 5rpx; */
+    /* margin-bottom: 10rpx; */
 }
-.nick-name{
-  margin-top:30rpx;
-  margin-left:30rpx;
+.chat-content-list-voice.length1{
+  /* width: 182rpx; */
+  width: 200rpx;
 }
-
-  /* 聊天内容 */
-   
-  .news {
-   
-  padding-top: 30rpx;
-   
-  text-align: center;
-   
-  height:80%;
-   
-  box-sizing:border-box;
-   
-  }
-   
-  #flag{
-   
-  margin-bottom: 100rpx;
-   
+.chat-content-list-voice.length2{
+  width: 262rpx;
+}
+.chat-content-list-voice.length3{
+  width: 332rpx;
+}
+/*声音语音*/
+.chat-voice-img{
+  width: 52rpx;
   height: 30rpx;
-   
-  }
-   
-  .chat-notice{
-   
-  text-align: center;
-   
-  font-size: 30rpx;
-   
-  padding: 10rpx 0;
-   
-  color: #666;
-   
-  }
-   
-  .historycon {
-   
-  height: 100%;
-   
-  width: 100%;
-   
-  /* flex-direction: column; */
-   
-  display: flex;
-   
-  border-top: 0px;
-   
-  }
-   
-  /* 聊天 */
-   
-  .chat-news{
-   
-  width: 100%;
-   
-  overflow: hidden;
-   
-  }
-   
-  .chat-news .my_right {
-   
   float: right;
-   
-  /* right: 40rpx; */
-   
-  padding: 10rpx 10rpx;
-   
-  }
-   
-  .chat-news .name{
-   
-  margin-right: 10rpx;
-   
-  }
-   
-  .chat-news .you_left {
-   
-  float: left;
-   
-  /* left: 5rpx; */
-   
-  padding: 10rpx 10rpx;
-   
-  }
-   
-  .selectImg{
-   
-  display: inline-block;
-   
-  width: 150rpx;
-   
-  height: 150rpx;
-   
-  margin-left: 50rpx;
-   
-  }
-   
-  .my_right .selectImg{
-   
-  margin-right: 80rpx;
-   
-  }
-   
-  .new_img {
-   
-  width: 60rpx;
-   
-  height: 60rpx;
-   
-  border-radius: 50%;
-   
-  vertical-align: middle;
-   
-  margin-right: 10rpx;
-   
-  }
-   
-  .new_txt {
-   
-  max-width: 300rpx;
-   
-  display: inline-block;
-   
-  border-radius: 6rpx;
-   
-  line-height: 60rpx;
-   
-  background-color: #95d4ff;
-   
-  padding: 5rpx 20rpx;
-   
-  margin: 0 10rpx;
-   
-  margin-left: 50rpx;
-   
-  }
-   
-  .my_right .new_txt{
-   
-  margin-right:60rpx;
-   
-  }
-   
-  .you{
-   
-  background-color: lightgreen;
-   
-  }
-   
-  .my {
-   
-  border-color: transparent transparent transparent #95d4ff;
-   
-  }
-   
-  .you {
-   
-  border-color: transparent #95d4ff transparent transparent;
-   
-  }
-   
-  .hei{
-   
-  margin-top: 50px;
-   
-  height: 20rpx;
-   
-  }
-   
-  .history {
-   
-  height: 100%;
-   
-  margin-top: 15px;
-   
-  padding: 10rpx;
-   
-  font-size: 14px;
-   
-  line-height: 40px;
-   
-  word-break: break-all;
-   
-  }
-   
-  ::-webkit-scrollbar {
-   
-  width: 0;
-   
-  height: 0;
-   
-  color: transparent;
-   
-  z-index: -1;
-   
-  }
-   
-   
-   
-  /* 信息输入区域 */
-   
-  .message{
-   
-  position: fixed;
-   
-  bottom:0;
-   
-  width: 100%;
-   
-  }
-   
-  .sendMessage{
+  margin-right: 40rpx;
+  margin-top: 28rpx;
+}
+.chat-content-list-avatar{
+    width: 88rpx;
+    height: 88rpx;
+    margin-right: 30rpx;
+    border-radius: 50%;
+}
+.chat-content-list-content{
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    min-height: 86rpx;
+    max-width: 464rpx;
+    line-height: 1.6;
+    position: relative;
+}
+.chat-content-list.right .chat-content-list-content{
+    align-items:flex-end;
+}
+.chat-content-list-msg.yellow {
+    background: #ffdb0e;
+}
+.chat-content-list-name{
+    margin-left: 16rpx;
+    font-family: MicrosoftYaHei;
+    font-size: 24rpx;
+    color: #1e1e1e;
+    margin-bottom: 6rpx;
+}
+.chat-content-list-msg{
+    padding: 16rpx 40rpx;
+    /* border-radius: 5px; */
+    border-top-left-radius: 43rpx;
+    border-top-right-radius: 43rpx;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 43rpx;
+    background-color: #ecf0f3;
+    color: #1e1e1e;
+    position: relative;
+    /* margin-left: 14rpx; */
+    max-width:540rpx;
+    word-wrap:break-word;
+    font-size: 32rpx;
+    font-weight: 400;
+}
+.chat-content-list.right .chat-content-list-msg{
+    border-top-left-radius: 43rpx;
+    border-top-right-radius: 43rpx;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 43rpx;
+}
+.chat-set{
+    width: 750rpx;
+    height: 98rpx;
+    background-color: #f7f7fa;
+    border-top: 2rpx solid rgba(0,0,0, .2);
+    padding: 0 24rpx;
+    position: relative;
+}
+.chat-set-icon{
+    width: 60rpx;
+    height: 60rpx;
+}
+.chat-set-icon-right{
+    margin-left: 24rpx;
+}
+.chat-set-input{
+    width: 530rpx;
+    height: 72rpx;
+    border-radius: 10rpx;
+    background-color: #ffffff;
+    border: solid 2rpx rgba(0,0,0, .2);
+    margin-left: 24rpx;
+    padding-left: 10rpx;
+    padding-right: 10rpx;
+    padding-top: 10rpx;
+    padding-bottom: 10rpx;
+    font-size: 24rpx;
+    line-height: 32rpx;
+}
+.chat-set-voice{
+    width: 530rpx;
+    height: 72rpx;
+    border-radius: 10rpx;
+    border: solid 2rpx rgba(0,0,0, .2);
+    line-height: 72rpx;
+    font-size: 24rpx;
+    color: #333;
+    text-align: center;
+    margin-left: 24rpx;
+    
+    
+}
+.chat-set-write{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.chat-emoji{
+    position: absolute;
+    width: 750rpx;
+    bottom: 98rpx;
+    left: 0;
+}
+.chat-emoji-list{
+    display: inline-flex;
+    flex-flow: wrap;
+}
+.chat-emoji-icon{
+    width: 46rpx;
+    height: 46rpx;
+    padding: 10rpx;
+    border-radius: 6rpx;
+}
+.chat-speaking{
+    position: fixed; 
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    background: rgba(2,2,2,.6);
+    z-index: 1000;
+    width: 300rpx;
+    height: 300rpx;
+    border-radius: 10rpx;
+}
+.speaker{ 
+    position:absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 120rpx;
+    height: 120rpx;
+    
+} 
+.chat-content-list-img{
+  width: 440rpx;
+  height: 376rpx;
   position: relative;
-   
-  display: block;
-   
-  height: 80rpx;
-   
-  padding: 10rpx 10rpx;
-   
-  background-color: #fff;
-   
-  border-top: 2rpx solid #eee;
-   
-  border-bottom: 2rpx solid #eee;
-   
-  z-index:3;
-   
-  }
-   
-  .sendMessage input{
-   
-  float:left;
-   
-  width: 66%;
-   
+  border-radius: 43rpx;
+  overflow: hidden;
+}
+.chat-content-list-img image{
+  width: 100%;
   height: 100%;
-   
-  line-height: 80rpx;
-   
-  border-bottom: 1rpx solid #ccc;
-   
-  padding:0 10rpx;
-   
-  font-size: 35rpx;
-   
-  color: #666;
-   
-  }
-   
-  .sendMessage view{
-   
-  display: inline-block;
-   
-  width: 80rpx;
-   
-  height: 80rpx;
-   
-  line-height: 80rpx;
-   
-  font-size: 60rpx;
-   
+}
+.chat-content-list-time{
+  display:block;
   text-align: center;
-   
-  color: #999;
-   
-  border: 1rpx solid #ccc;
-   
-  border-radius: 50%;
-   
-  margin-left: 10rpx;
-   
-  }
-   
-  .sendMessage button {
-   
+  width: 100%;
+  height: 88rpx;
+  font-size: 24rpx;
+  color: #cccccc;
+  float: left;
+  padding-top:30rpx;
+  box-sizing: border-box;
+}
+.chat-content-list .chat-content-list-msg-del{
   position: absolute;
+  right:-10rpx;
+  top:-10rpx;
+  font-size: 20rpx;
+  width:20rpx;
+  height: 20rpx;
+  color: #000;
+  line-height: 1;
+}
+.chat-content-list.right .chat-content-list-msg-del{
+  left:-10rpx;
+}
+.over-read-tip{
+  width: 12rpx;
+  height: 12rpx;
+  border-radius: 50%;
+  background: #553a91;
+  position: absolute;
+  left: -40rpx;
+  bottom: 0;
+  display: none;
+}
+.over-read-tip.active{
+  display: block;
+}
 
-  right: 5rpx;
-   
-  top: 20rpx;
-  /* float: right; */
-  font-size: 25rpx;
-   
-  }
-   
-  .increased{
-   
-  width:100%;
-   
-  /* height: 150rpx; */
-   
-  padding: 40rpx 30rpx;
-   
-  background-color: #fff;
-   
-  }
-   
-  .increased .image{
-   
-  width: 100rpx;
-   
-  height: 100rpx;
-   
-  border: 3rpx solid #ccc;
-   
-  line-height: 100rpx;
-   
-  text-align: center;
-   
-  border-radius: 8rpx;
-   
-  font-size:35rpx;
-   
-  }
-   
-  @keyframes slidedown {
-   
-  from {
-   
-  transform: translateY(0);
-   
-  }
-   
-  to {
-   
-  transform: translateY(100%);
-   
-  }
-   
-  }
-   
-  .slidedown {
-   
-  animation: slidedown 0.5s linear ;
-   
-  }
-   
-  .slideup {
-   
-  animation: slideup 0.5s linear ;
-   
-  }
-   
-  @keyframes slideup {
-   
-  from {
-   
-  transform: translateY(100%);
-   
-  }
-   
-  to {
-   
-  transform: translateY(0);
-   
-  }
-   
-  }
+
+
+
+
+
+
+
+
