--- a/pages/me/record/index.wxml
+++ b/pages/me/record/index.wxml
@@ -1,54 +1,27 @@
-<!-- <view class="weui-search-bar">  -->
-            <!-- <view class="weui-search-bar__form"> -->
-            <!-- 搜索框 -->
-                <!-- <view class="weui-search-bar__box"> -->
-                    <!-- <icon class="weui-icon-search_in-box" type="search" size="14"></icon> -->
-                    <!-- <input type="text" class="weui-search-bar__input" placeholder="请输入搜索内容"/> -->
-                <!-- </view> -->
-            <!-- </view> -->
-            <!-- 搜索按钮,调用搜索查询方法 -->
-            <!-- <view class="weui-search-bar__cancel-btn" bindtap='search'>搜索</view> -->
-<!-- </view> -->
-
-<!-- 档案 -->
-
-<!-- 列表 -->
-<!-- <scroll-view style="height:500rpx" scroll-y="true">
-  <view class="floor"
-        wx:for="{{article_list}}"
-        wx:key="knoCardId"
-        data-index="{{item.knoCardId}}"
-        bindtap="toDetail">
-        <view class="picture">
-            <image class="img" src="{{item.knoCardIcon}}" mode="scaleToFill" />
-        </view>  
-        <view class="info">
-            <view class="info_title">{{item.knoCardTitle}}</view>
-        </view>  
-    </view>
-</scroll-view> -->
-
-
-<scroll-view scroll-y="false">
-  <view class="doctor_floor"
-        wx:for="{{record_list}}"
-        wx:item="item"
-        wx:key="id"
-        bindtap="toDetail"
-        bindscrolltolower="scrolltolower">
-        <image class="background" src="/images/方框1.png"></image>
-        <view class="avatar">
-            <image class="img" src="{{item.userAvatar}}" mode="scaleToFill" />
-        </view>   
-        
-
-        <view class="info"> 
-          <text class="name">{{item.realName}}</text>
-          <text class="title" wx:if="{{item.sex}}">女</text>
-          <text class="title" wx:if="{{!item.sex}}">男</text>    
-          <view class="hospital" wx:if="{{item.diagnoseResult}}">患有抑郁症（模型准确率>90%）</view>
-          <view class="hospital" wx:if="{{!item.diagnoseResult}}">未患有抑郁症（模型准确率>90%）</view>
-          <view class="excel" >诊断时间：{{item.updateTime}}</view>
-        </view>   
-  </view>
-</scroll-view>
+<!--pages/history/history.wxml-->
+<view class="cart">
+	<view class="content">
+		<!-- 通过 isTouchMove 的值来对应移动位置-->
+		<view class="item {{item.isTouchMove ? 'touch-move-active' : ''}}" wx:for="{{record_list}}" wx:key="item.id">
+			<view class="item-left" data-index="{{index}}" bindtouchstart="touchStart" bindtouchmove="touchMove">
+				<view class="imgs">
+					<image src="{{item.userAvatar}}" mode="aspectFill"></image>
+				</view>
+				<view class="context">
+					<view class="title">{{item.realName}}</view>
+					<view class="bottoms">
+            <view class="duration" wx:if="{{!item.diagnoseResult}}">抑郁症概率低</view>
+            <view class="duration" wx:else>抑郁症概率高</view>
+            <view class="date">诊断时间:{{item.updateTime}}</view>
+					</view>
+				</view>
+			</view>
+			<view class="frame">
+				<view class="goto" data-id="{{item.id}}" bindtap="goto">前往</view>
+				<view class="delete" data-id="{{item.id}}" bindtap="delItem">删除</view>
+			</view>
+			
+			
+		</view>
+	</view>
+</view>
