--- a/pages/diagnose/check/check.wxss
+++ b/pages/diagnose/check/check.wxss
@@ -1,3 +1,4 @@
+
 .big_box{
   width: 410px;
   height: 780px;
@@ -7,7 +8,12 @@
   border-radius:5px 5px 5px 5px;
 
 }
-
+.background{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
 .box{
   width: 414px;
   height: 207px;
