--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -60,7 +60,7 @@ autoplay current="0" interval="5000" duration="1000" circular >
         </view>  
         <view class="info">
             <view class="info_title">{{item.knoCardTitle}}</view>
-            <view class="category">{{item.categoryName}}</view>
+            <view class="category">#{{item.categoryName}}</view>
             <view class="read">阅读{{item.knoCardRead}}</view>
             <view class="like">赞{{item.knoCardLikes}}</view>
         </view>  
